# media-minder-rmaiig

./: Modelfile-llama3  README.md  analyze.py  pyproject.toml  settings.ini
MediaMinder/: _modidx.py  crewai.py  crewai2.py  eval_results.py  html.py  scrape.py  search.py
nbs/: 01_get_page_data.ipynb  02_scrape_page.ipynb  03_search.ipynb  04_eval_result.ipynb  05_crewai.ipynb  index.ipynb  nbdev.yml
searxng/: settings.yml
test-data/: Continental acquires mold specialist EMT for commercial and specialty tires.html  Culpepper Cattle Co. Dallas Opens In Continental Gin Building - Local Profile.html
