[tool.poetry]
name = "mediaminder"
version = "0.1.0"
description = "Find and analyze media mentions"
authors = ["Cameron Pope <cameron@theaboutbox.com>"]
license = "Commercial"
readme = "README.md"
packages = [ { include = "MediaMinder" } ]

[tool.poetry.dependencies]
python = ">=3.10,<=3.13"
langchain = "^0.1.17"
trafilatura = "^1.9.0"
msgspec = "^0.18.6"
rich = "^13.7.1"
requests = "^2.31.0"
groq = "^0.5.0"
crewai = {extras = ["tools"], version = ">= 0.28.8"}
langchain-community = "^0.0.37"
langchain-groq = "^0.1.3"


[tool.poetry.group.dev.dependencies]
nbdev = "^2.3.20"
jupyterlab-quarto = "^0.3.3"
jupyterlab = "^4.1.8"
ruff = "^0.4.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
